--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<html>
+
+<head>
+
+    <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+    <div id="particles-js"></div> 
+    <div class="content">
+        <h1>Your Website Content</h1>
+        <p>This is some content placed above the particle background.</p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+
+    <script>
+        particlesJS.load('particles-js', './particles.json', function () {
+            console.log('particles.js loaded - callback');
+        });
+    </script>
+    <style> </style>
+</body>
+
+</html>
