--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 
     <link rel="stylesheet" href="./styles.css">
+    <title>Particle Background Test</title>
 </head>
 
 <body>
@@ -14,13 +15,14 @@
         <p>This is some content placed above the particle background.</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-
+    
     <script>
         particlesJS.load('particles-js', './particles.json', function () {
             console.log('particles.js loaded - callback');
         });
+
     </script>
-    <style> </style>
+    
 </body>
 
 </html>
