--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
 </head>
 
 <body>
-    <div id="particles-js"></div> 
+    <div id="particles-js"></div>
     <div class="content">
         <h1>Your Website Content</h1>
         <p>This is some content placed above the particle background.</p>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script>
-        particlesJS.load('particles-js', './particles.json', function () {
+        particlesJS.load('particles-js', 'particles.json', function () {
             console.log('particles.js loaded - callback');
         });
 
     </script>
-    
+
 </body>
 
 </html>
