Testing particles movement

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Particle Background Test</title>
 </head>
-
 <body>
     <div id="particles-js"></div>
     <div class="content">
@@ -19,9 +16,6 @@
         particlesJS.load('particles-js', 'particles.json', function () {
             console.log('particles.js loaded - callback');
         });
-
     </script>
-
 </body>
-
 </html>
