--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vibhu Vasanth</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>Particle Background Test</title>
 </head>
 <body>
-  <header class="animate-in">
-    <h1>ABout me</h1>
-    <p>Your gateway to intelligent design</p>
-  </header>
-
-  <section class="features animate-in">
-    <h2>Features</h2>
-    <ul>
-      <li>⚡ Fast and responsive</li>
-      <li>🎨 Elegant animations</li>
-      <li>🧠 Smart interactions</li>
-    </ul>
+    <div id="particles-js"></div>
+    <div class="content">
+        <h1>Your Website Content</h1>
+        <p>This is some content placed above the particle background.</p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+        particlesJS.load('particles-js', 'particles.json', function () {
+            console.log('particles.js loaded - callback');
+        });
+    </script>
+</body>
+</html>
