--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="./styles.css">
-    <title>Particle Background Demo</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>Particle Background Test</title>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -10,9 +11,9 @@
         <h1>Your Website Content</h1>
         <p>This is some content placed above the particle background.</p>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script>
-        particlesJS.load('particles-js', './particles.json', function () {
+        particlesJS.load('particles-js', 'particles.json', function () {
             console.log('particles.js loaded - callback');
         });
     </script>
