--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
 <body>
     <div id="particles-js"></div>
     <div class="content">
-        <h1 style="font-size:60px; font-family:Arial, Helvetica, sans-serif;">Vibhu Vasanth</h1>
-        <p style="font-size:40px; font-family:Arial, Helvetica, sans-serif ">Welcome to my profile.</p>
+        <h1>Your Website Content</h1>
+        <p>This is some content placed above the particle background.</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script>
         particlesJS.load('particles-js', 'particles.json', function () {
             console.log('particles.js loaded - callback');
-    });
+        });
     </script>
 </body>
 </html>
-<body>
-    
-</body>
