--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <title>Particle Background Test</title>
+  <meta charset="UTF-8">
+  <title>Cosmic Dust</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="particles-js"></div>
-   
-    <div class="content">
-        <h1>Your Website Content</h1>
-        <p>This is some content placed above the particle background.</p>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS.load('particles-js', 'particles.json', function () {
-            console.log('particles.js loaded - callback');
-        
-        });
-       
-    </script>
+  <div id="particles-js"></div>
+
+  <!-- Particle.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <!-- Load config -->
+  <script src="particles-config.js"></script>
 </body>
 </html>
