--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pastel Particles</title>
+  <title>Cosmic Water Dust</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="particles-js"></div>
-  <div class="content">Pastel Particle Vibes 🌈</div>
+  <div class="content">Cosmic Water Dust ✨</div>
 
   <!-- Load particles.js -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
