--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dust Particles Follow Mouse - Background</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vibhu Vasanth</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- This div will contain your main website content -->
-    <div id="content">
-        <h1>Vibhu Vasanth</h1>
-        <p>This is some content layered over the interactive particle background.</p>
-        <p>You can add more sections, text, images, and other elements here.</p>
-        <p>Try moving your mouse around!</p>
-    </div>
-
-    <!-- The Three.js script will dynamically create and append the canvas here -->
-    <script type="module" src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
