--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Glowing Particles</title>
+  <title>Vibhu Vasanth</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+
   <script type="module" src="main.js"></script>
 </body>
 </html>
+<head>
+<body>
+<h1 style="Font-size:100;text-align:center;"Hello, Welcome to my profile! My name is Vibhu Vasanth></h1> 
+
+
+
+</body>
+ <h1>Hey how are you</h1>
+</head>
