--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vibhu Vasanth</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vibhu Vasanthtitle>
+    <link rel="stylesheet" href="styles.css">
+</html>
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-
-  <script type="module" src="main.js"></script>
+    <header>
+        <h1>Welcome to Vibhu Vasanth's Page</h1>
+    </header>
+    <main>
+        <p>This is a simple HTML page to demonstrate structure.</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 Vibhu Vasanth</p>
+    </footer>
 </body>
 </html>
-<head>
-<body>
-<h1 style="Font-size:100;text-align:center;"Hello, Welcome to my profile! My name is Vibhu Vasanth></h1> 
-
-
-
-</body>
- 
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
+<body>
+    <header>
+        <h1>Welcome to Vibhu Vasanth's Page</h1>
+    </header>
+    <main>
+        <p>This is a simple HTML page to demonstrate structure.</p>
+    </main>
+    
+    
+</body>
