--- a/index.html
+++ b/index.html
@@ -7,42 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </html>
 <body>
-    <header>
-        <h1>Vibhu Vasanth</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I'm Vibhu Vasanth, a passionate developer with a love for creating innovative solutions. I specialize in web development and have experience with various programming languages and frameworks.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Project 1:</strong> Description of project 1.</li>
-            <li><strong>Project 2:</strong> Description of project 2.</li>
-            <li><strong>Project 3:</strong> Description of project 3.</li>
-        </ul>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>You can reach me at: <a href="mailto:";></a>
-        </p>
-    </section>  
-    <footer>
-        <p>&copy; 2025 Vibhu Vasanth. All rights reserved.</p>
-
-    </footer>
-</body>
-</html>
-
-      
-
+    <div class="container">
+        <div class="content content1">
+             <h1 style="text-align: center;font-family:Arial, Helvetica, sans-serif; font-size:30px">Vibhu Vasanth</h1>
+             <p style="text-align: center;font-family:Arial, Helvetica, sans-serif; font-size:15px">Welcome to my profile!</p>
+        </div>
+   <div class="container">
+        <div class="content content2">
+             <h1 style="text-align: center;font-family:Arial, Helvetica, sans-serif; font-size:30px">About Me</h1>
+             <p style="text-align: center;font-family:Arial, Helvetica, sans-serif; font-size:15px">Hi their, I am Vibhu Vasanth. THank you</p>
+        </div>
+    <div class="container">
+        <div class="content content3 ">
+             <h1 style="text-align: center;font-family:Arial, Helvetica, sans-serif; font-size:30px">Expirence</h1>
+             <p style="text-align: center;font-family:Arial, Helvetica, sans-serif; font-size:15px">I have done many many things</p>
+        
+     </div>
+    </body>
+    </html>
