--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="dropdown-content" id="dropdownContent">
         <a href="#hero">Home</a>
         <a href="#about">About Me</a>
+        <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </div>
@@ -22,21 +23,45 @@
   </nav>
   <main>
     <section id="hero" class="section hero-section">
+      <div id="ai-bg"></div>
       <div id="three-container"></div>
       <div class="hero-text">
-        <h1 class="animated-name glitch" data-text="Vibhu Vasanth">Vibhu Vasanth</h1>
-        <p class="subtitle">Your Digital Shield in Cybersecurity</p>
+        <h1 class="animated-name" id="mainName">Vibhu Vasanth</h1>
       </div>
-      <div class="scroll-down"></div>
     </section>
     <section id="about" class="section about-section">
       <h2>About Me</h2>
       <p>
         Hi, I'm Vibhu!<br>
-        I'm passionate about cybersecurity and interactive 3D web experiences.<br>
+        I'm passionate about cybersecurity, AI, and interactive 3D web experiences.<br>
         I build secure, visually engaging websites that make a difference.<br>
         Let's make the web safer together!
       </p>
+    </section>
+    <section id="skills" class="section skills-section">
+      <h2>Skills</h2>
+      <div class="skills-list">
+        <div class="skill-bar">
+          <span>Cybersecurity</span>
+          <div class="bar"><div class="fill" style="width: 95%"></div></div>
+        </div>
+        <div class="skill-bar">
+          <span>Three.js</span>
+          <div class="bar"><div class="fill" style="width: 90%"></div></div>
+        </div>
+        <div class="skill-bar">
+          <span>AI/ML</span>
+          <div class="bar"><div class="fill" style="width: 85%"></div></div>
+        </div>
+        <div class="skill-bar">
+          <span>Web Development</span>
+          <div class="bar"><div class="fill" style="width: 92%"></div></div>
+        </div>
+        <div class="skill-bar">
+          <span>Python</span>
+          <div class="bar"><div class="fill" style="width: 88%"></div></div>
+        </div>
+      </div>
     </section>
     <section id="projects" class="section projects-section">
       <h2>Projects</h2>
