--- a/index.html
+++ b/index.html
@@ -39,98 +39,54 @@
 								</section>
 
 							<!-- Section -->
-								<section>
+								<section id="aboutme">
 									<header class="major">
 										<h2 style="font-family:Arial, Helvetica, sans-serif; font-size:larger; text-align:center">About me</h2>
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
+											<!--span class="icon fa-gem"></span-->
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Hi, I am Vibhu Vasanth! I am an 8th grader focussed in robotics, and Artificial Intelligence . I love programming and spend a lot of time learning different programming languages. Currently I am learning Python and basic AI concepts. I have participated in quite a few competitions where I displayed my skill and placed them to the test.  Some of which I placed top 5, 3rd as well as 1st place. I am a driven, curious, adaptable,  and eager student who loves to be challenged!</p>
 											</div>
 										</article>
-										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
+										
 									</div>
 								</section>
 
 							<!-- Section -->
-								<section>
+								<section id="profile">
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Profile</h2>
+
 									</header>
-									<div class="posts">
+									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+									<div class="content">
+									<h3></h3><b><strong>JP Case Middle School</strong></b></h3>
+										<p><i><em>	8th Grade All honors September 2025 - June 2026</em> 
+</i></p>
+										<h3><small>Activites</small></h3>
+										<ul>
+											<li>Member of Robotics Club</li>
+											<li>Member of Math League</li>
+											<li>Member of YAG (Youth and Government)</li>
+
+			
+										</ul>
+										<h3><small>Achievements:
+</small></h3>
+										<ul>
+											<li>Represented JP Case middle school in 7th grade and winner of state wide robotics competition (MSTDCNJ - Middle school tech design competition NJ)
+</li>
+											<li>Participated in statewide YAG and passed a bill on “Artificial Intelligence cannot replace teachers fully, yet should be a helpful resource to both students and teachers” successfully into the youth legislature.
+</li>
+										</ul>
+							
+			</div>
 										</article>
 									</div>
-								</section>
+										</section>
 
 						</div>
 					</div>
@@ -153,7 +109,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Home</a></li>
-										<li><a href="aboutme.html">About Me</a></li>
+										<li><a href="#aboutme">About Me</a></li>
 										<li><a href="profile.html">Profile</a></li>
 										<li><a href="portfolio.html">Portfolio</a></li>
 									</ul>
