--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="#aboutme">About Me</a></li>
-						<li><a href="profile.html">Profile</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="#profile">Profile</a></li>
+						<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
 					</ul>
 				</nav>
 				<!-- Footer -->
