--- a/index.html
+++ b/index.html
@@ -205,6 +205,26 @@
 						</iframe>
 					</div>
 				</section>
+				<section id="00tm2023">
+					<header class="major">
+						<h2>Odyssey Of the Mind 2023 - Because iCan</h2>
+
+					</header>
+					<div class="features">
+						<iframe width="420" height="315" src="https://youtu.be/iaylTQRoD4E">
+						</iframe>
+					</div>
+				</section>
+				<section id="ootm2024">
+					<header class="major">
+						<h2>Odyssey of the Mind 2024 - AI Tech No Art </h2>
+
+					</header>
+					<div class="features">
+						<iframe width="420" height="315" src="https://youtu.be/4zHgg9GBuHk">
+						</iframe>
+					</div>
+				</section>
 
 			</div>
 		</div>
@@ -229,7 +249,9 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="#aboutme">About Me</a></li>
 						<li><a href="#profile">Profile</a></li>
-						<li><a href="#joisting">Portfolio</a></li>
+						<li><a href="#joisting">Joisting Robotics Competition</a></li>
+						<li><a href="#ootm2023">Odyssey Of the Mind 2023</a></li>
+						<li><a href="#ootm2024">Odyssey Of the Mind 2024</a></li>
 					</ul>
 				</nav>
 				<!-- Footer -->
