--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
 					</header>
 					<div class="features">
-						<iframe width="420" height="315" src="https://youtu.be/4zHgg9GBuHk">
+						<iframe width="420" height="315" src="https://www.youtube.com/watch?v=4zHgg9GBuHk">
 						</iframe>
 					</div>
 				</section>
