--- a/index.html
+++ b/index.html
@@ -197,13 +197,23 @@
 
 				<section id="joisting">
 					<header class="major">
-						<h2>Joisting - Robotics Competition Videos</h2>
-
+						<h2>Joisting - Robotics Competition</h2>
 					</header>
+					<div>
+						<h3>Joisting Championship</h3>
+					</div>
 					<div class="features">
-						<iframe width="420" height="315" src="https://youtu.be/iaylTQRoD4E"></iframe>
-						<iframe width="420" height="315" src="https://youtu.be/WwnlnyEaPeM"></iframe>
-						<iframe width="420" height="315" src="https://youtu.be/4ywlhN3eE0U"></iframe>
+						
+						<img width="500" height="auto" src="images/joisting_champion.jpg" title="Joisting Robotics Championship" />
+					</div>
+					<div class="features">
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/iaylTQRoD4E"></iframe>
+					</div>
+					<div  class="features">	
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/WwnlnyEaPeM"></iframe>
+					</div>
+					<div  class="features">	
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/4ywlhN3eE0U"></iframe>
 					</div>
 				</section>
 				<section id="00tm2023">
@@ -212,7 +222,7 @@
 
 					</header>
 					<div class="features">
-						<iframe width="420" height="315" src="https://youtu.be/ktWx2dDu5Cc">
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/ktWx2dDu5Cc">
 						</iframe>
 					</div>
 				</section>
@@ -222,7 +232,7 @@
 
 					</header>
 					<div class="features">
-						<iframe width="420" height="315" src="https://www.youtube.com/watch?v=4zHgg9GBuHk">
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/4zHgg9GBuHk">
 						</iframe>
 					</div>
 				</section>
