--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 						<iframe width="420" height="315" src="https://www.youtube.com/embed/4ywlhN3eE0U"></iframe>
 					</div>
 				</section>
-				<section id="00tm2023">
+				<section id="ootm2023">
 					<header class="major">
 						<h2>Odyssey Of the Mind 2023 - Because iCan</h2>
 
