--- a/generic.html
+++ b/generic.html
@@ -142,12 +142,11 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>Feel free to reach out if you'd like to learn more about my projects, discuss robotics and AI, or just connect! I'm always open to new opportunities and collaborations.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">vibhu@example.com</a></li>
+										<li class="icon solid fa-phone">+1 (201) 123-4567</li>
+										<li class="icon solid fa-home">New Jersey, USA</li>
 									</ul>
 								</section>
 
