--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<!--span class="icon fa-gem"></span-->
 							<div class="content">
 								<p>Hi, I am Vibhu Vasanth! I am an 8th grader focussed in robotics, and Artificial
-									Intelligence . I love programming and spend a lot of time learning different
+									Intelligence.I love programming and spend a lot of time learning different
 									programming languages. Currently I am learning Python and basic AI concepts. I have
 									participated in quite a few competitions where I displayed my skill and placed them
 									to the test. Some of which I placed top 5, 3rd as well as 1st place. I am a driven,
@@ -197,14 +197,14 @@
 
 				<section id="joisting">
 					<header class="major">
-						<h2>Joisting - Robotics Competition</h2>
+						<h2>Jousting - Robotics Competition</h2>
 					</header>
 					<div>
-						<h3>Joisting Championship</h3>
+						<h3>Jousting Championship</h3>
 					</div>
 					<div class="features">
 						
-						<img width="500" height="auto" src="images/joisting_champion.jpg" title="Joisting Robotics Championship" />
+						<img width="500" height="auto" src="images/joisting_champion.jpg" title="Jousting Robotics Championship" />
 					</div>
 					<div class="features">
 						<iframe width="420" height="315" src="https://www.youtube.com/embed/iaylTQRoD4E"></iframe>
